--- a/tex/references.bib
+++ b/tex/references.bib
@@ -160,3 +160,27 @@
   year={1991},
   publisher={Elsevier}
 }
+@article{mason1986,
+  title={On the Scope of Quasi-Static Pushing},
+  author={Mason, M. T.},
+  journal={ISRR},
+  year=1986,
+  publisher={MIT Press}
+}
+@article{lynch1996stable,
+author = {Kevin M. Lynch and Matthew T. Mason},
+title = {Stable Pushing: Mechanics, Controllability, and Planning},
+journal = {The International Journal of Robotics Research},
+volume = {15},
+number = {6},
+pages = {533-556},
+year = {1996},
+doi = {10.1177/027836499601500602},
+}
+@book{Thrun2005,
+ author = {Thrun, Sebastian and Burgard, Wolfram and Fox, Dieter},
+ title = {Probabilistic Robotics (Intelligent Robotics and Autonomous Agents)},
+ year = {2005},
+ isbn = {0262201623},
+ publisher = {The MIT Press},
+} 
