--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -360,16 +360,23 @@ subsumed by the theory of planar pushing. This is understandable
 because the differences between pulling and pushing are subtle and few
 (despite their significance).
 
-Regardless, there are several related works in robotic pushing worth
-mentioning. Lynch and Mason \cite{lynch1996stable}
+Regardless, our planner is most closely related to the work of Lynch
+and Mason \cite{lynch1996stable}. They invented an algorithm that
+plans stable pushes using two contact points. However, their use of
+weaker bounds \cite{peshkin1988motion, alexander1993bounds, Mason}
+leads to more conservative strategies.
 
-Robotic pulling represents 
+% there are several related works in robotic pushing worth
+% mentioning. Lynch and Mason invented an algorithm that plans stable
+% pushes using two contact points \cite{lynch1996stable}. 
 
-While pulling 
+% Robotic pulling represents 
 
-While several planners for robotic pushing exist, 
+% While pulling 
 
-we were not able to find any designed for
+% While several planners for robotic pushing exist, 
+
+% we were not able to find any designed for
 
 % In contrast to the prior art, our algorithm is the first to find
 % \textit{exact} angular velocity bounds for a pushed object. 
@@ -1177,10 +1184,10 @@ consist of constant curvature turns and straight line segments. To
 apply these curves to our system, we need two pieces of information:
 the minimum turning radius and the effective rear axle center. 
 
-Given a heading $\omega \in (-\pi/2,\pi/2) $ and resultant angular velocity
-$\alpha(\omega)$ in the frame of the contact point, the minimum
-turning radius is equivalent to the distance from the center of
-rotation to the line between the contact point and the center of
+Given a heading $\omega \in (0,\pi/2) $ and resulting upper angular
+velocity bound $\alpha(\omega)$ in the frame of the contact point, the
+minimum turning radius is equivalent to the distance from the center
+of rotation to the line between the contact point and the center of
 pressure $\mathbf{p}_0 = [x_0,y_0]^T$, that is
 \begin{equation}
   r_{\text{min}} = \frac{\sign y_0}{\alpha(\omega)},
