tex: Edits to Related Work

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -358,13 +358,11 @@ planner, apart from ours, which explicitly takes advantage of this
 stability. We note that the literature treats pulling as a topic
 subsumed by the theory of planar pushing. This is understandable
 because the differences between pulling and pushing are subtle and few
-(despite their significance).
-
-Regardless, our planner is most closely related to the work of Lynch
-and Mason \cite{lynch1996stable}. They invented an algorithm that
-plans stable pushes using two contact points. However, their use of
-weaker bounds \cite{peshkin1988motion, alexander1993bounds, Mason}
-leads to more conservative strategies.
+(despite their significance). Regardless, our planner is most closely
+related to the work of Lynch and Mason \cite{lynch1996stable}. They
+invented an algorithm that plans stable pushes using two contact
+points. However, their use of weaker bounds \cite{peshkin1988motion,
+  alexander1993bounds, Mason} leads to more conservative strategies.
 
 % there are several related works in robotic pushing worth
 % mentioning. Lynch and Mason invented an algorithm that plans stable
