tex: Edits to Comments

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -450,7 +450,8 @@ computes the feasibility of a given pushed object velocity.
     \fill (0,0) circle [radius=1.pt];
     \fill (1.2207,0) circle [radius=1.pt] node[below right] {$x_{\text{\tiny IC}}$};
   \end{tikzpicture}
-  \caption{Motion of a press-pulled slider. \BB{Define variables and provide a short explanation of the figure.}}
+  \caption{Motion of a press-pulled slider.}
+% \BB{Define variables and provide a short explanation of the figure.}}
   \label{fig:presspull-motion}
 \end{figure}
 
@@ -485,9 +486,9 @@ where
     0 & 1 &  x_1
   \end{bmatrix*}.
 \end{equation}
-\EH{Define conversion between twist and rotation center.}  We choose a
-coordinate frame such that the origin is the contact point and the
-$y$-axis aligns with the contact point velocity (see Figure
+% \EH{Define conversion between twist and rotation center.}  
+We choose a coordinate frame such that the origin is the contact point
+and the $y$-axis aligns with the contact point velocity (see Figure
 \ref{fig:presspull-motion} for an example). The contact point is
 assumed to be pushed with unit speed. Assuming Coulomb's law of
 sliding friction, the total frictional force and moment of the body at
