--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -1181,11 +1181,14 @@ Pseudo-Huber loss function \footnote{This function approximates an
 \begin{equation}
 \mathcal{L}_{\delta}(a) = \sqrt{a^2+\delta^2}-\delta,
 \end{equation}
-$\mathbf{x}_F$ is the goal configuration, and $\mathbf{k}$ and
-$\lambda$ are penalty coefficients. We set the final upper and lower
-bounds, $u_N$ and $\ell_N$, to be equal in the target state
+$\mathbf{x}_F$ is the goal configuration, $\mathbf{k}$ is the slope of
+the vectorized Pseudo-Huber loss function, $\bm{\delta}$ is the width
+of the vectorized Pseudo-Huber loss function, and $\lambda$ is the
+distance penalty coefficient. We set the final upper and lower bounds,
+$u_N$ and $\ell_N$, to be equal in the target state
 $\mathbf{x}_F$. This ensures the generated trajectory converges
-towards the target orientation (due to Proposition \ref{prop:orientation-bounds}).
+towards the target orientation (due to Proposition
+\ref{prop:orientation-bounds}).
 
 We initialize our optimizer using paths generated from Dubin's curves
 \cite{dubins1957curves} because pulling with sticking contact shares
@@ -1300,14 +1303,25 @@ Fig.~\ref{fig:hardware} shows the experimental setup to validate the theory pres
 
 Experiments were executed on a test workspace with a motion capture system and an ABB 140 manipulator with a conical finger mounted on it. The object to be manipulated was laser-cut out of acrylic to be cuboidal (75mmx50mmx6.35mm) with 4 holes at the edges as holds for the conical finger to pull on. A 5 camera motion capture system was set up to record ground truth position of the object in 2D with a worst case accuracy of 2mm. To compensate for this, the holes on the object were oversized by 1mm.
 
-We generated random start and end poses within the vision system's workspace for the planner with hard constraints enforced to prevent the planner from generating trajectories outside the robot's reachable workspace.  
-The slope ($k$) of the Pseudo-Huber Loss function for the DDP planner was set to (5000 5000 1000 1000 40) and the width ($\lambda$) was set to (0.1 0.1 0.2 0.2 0.0) for the states (x y u l d) respectively (where d is the total distance travelled.)
-The planner was evaluated for all contact points and the trajectory with lowest cost while satisfying the workspace constraint was picked and executed on the robot at 25mm/s linear speed. The final pose was then recorded by the motion capture system. 
+We generated random start and end poses within the vision system's
+workspace for the planner with hard constraints enforced to prevent
+the planner from generating trajectories outside the robot's reachable
+workspace.  The slope $\mathbf{k}$ of the Pseudo-Huber Loss function
+for the DDP planner was set to $[5000, 5000, 1000, 1000]$ and the
+width $\bm{\delta}$ was set to $[0.01, 0.01, 0.02, 0.02]$. The
+distance penalty $\lambda$ was set to $40$. The planner was evaluated
+for all eight contact points and the lowest cost trajectory that
+satisfied the workspace constraints was executed on the robot at
+25mm/s linear speed. The final pose was then recorded by the motion
+capture system.
 
-Out of one hundred experiments attempted, 77 experiments yielded an average distance error of 3.9mm (standard deviation:2.6mm) and an angular error of 5.9 degrees (standard deviation: 6.16 degrees). Note that these errors are computed in a frame centered at the object center and not at the contact point.
-The remaining 23 experiments were discarded due to either the workspace constraint or high detection uncertainty in the vision system.
-
-
+Out of one hundred experiments attempted, 77 experiments yielded an
+average distance error of 3.9mm (standard deviation:2.6mm) and an
+angular error of 5.9 degrees (standard deviation: 6.16 degrees). Note
+that these errors are computed in a frame centered at the object
+center and not at the contact point.  The remaining 23 experiments
+were discarded due to either the workspace constraint or high
+detection uncertainty in the vision system.
 
 \begin{figure}
 \begin{center}
