Spelling error in trajectory figure caption

--- a/tex/RSS2017_PressPull.tex
+++ b/tex/RSS2017_PressPull.tex
@@ -1392,7 +1392,7 @@ the center.
 \caption{(Dashed red line) The planned robotic pulling
   trajectory. (Dashed black line) The area swept by the possible poses
   computed by our bounds during the planned trajectory. (Grey
-  rectangles) The measure poses of the object when the trajectory was
+  rectangles) The measured poses of the object when the trajectory was
   executed on a real robot.}
 \label{fig:trajectory}
 \end{figure}
